<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="397dp"
        android:layout_height="139dp"
        android:contentDescription="@string/logo"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintBottom_toTopOf="@+id/lusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        app:srcCompat="@drawable/pansala" />

    <TextView
        android:id="@+id/loginmessage"
        android:layout_width="193dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:text="@string/loginmsg"
        android:textColor="#F8F8F8"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.889" />

    <EditText
        android:id="@+id/lusername"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/inputusername"
        android:inputType="textPersonName"
        android:paddingBottom="0dp"
        android:text="@string/blank"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/lpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lpassword"
        android:layout_width="270dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:background="@drawable/textinput_border"
        android:ems="10"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:textColor="@color/colorWhiteFont"
        android:textColorHint="@color/colortHint"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_file"
        android:text="@string/login"
        android:textColor="@color/colorWhiteFont"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/reg_button"
        android:text="@string/register"
        android:textColor="@color/colorWhiteFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>