<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mgtMsg_prof"
        android:layout_width="326dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/prof_mgtMsg"
        android:textColor="#ffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/name_prof"
        android:layout_width="147dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/prof_name"
        android:textSize="14sp"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prof_joinDate"
        android:textSize="12sp"
        android:textColor="#9C9C9C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_prof"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tele_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_telephone"
        android:textColor="#d77c40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/prof_phoneNo"
        android:textColor="#ffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tele_prof"
        app:layout_constraintVertical_bias="0.004"
        tools:text="0761234567" />

    <Button
        android:id="@+id/teleEdit_btn"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:text="@string/prof_editBtn"
        android:background="@android:color/holo_orange_dark"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <TextView
        android:id="@+id/email_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prof_email"
        android:textSize="14sp"
        android:textColor="#d77c40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/emailAddr_prof"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/prof_EmailAddr"
        android:textColor="#ffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_prof"
        app:layout_constraintVertical_bias="0.0"
        tools:text="example@gmail.com" />

    <Button
        android:id="@+id/emailEdit_btn"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:text="@string/profEmail_btn"
        android:textSize="12sp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailAddr_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/emailAddr_prof" />

    <TextView
        android:id="@+id/passwordTxt_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prof_passwordTxt"
        android:textColor="#d77c40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddr_prof" />

    <EditText
        android:id="@+id/pwField_prof"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/prof_pwField"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt_prof"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/prof_pwBtn"
        android:textSize="12sp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwField_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pwField_prof" />

    <Button
        android:id="@+id/saveBtn_prof"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/prof_saveBtn"
        android:background="@drawable/button_file"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwField_prof"
        app:layout_constraintVertical_bias="0.115" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="103dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/profile_image" />


</androidx.constraintlayout.widget.ConstraintLayout>